static/css/styles.css
/* ... */
body.login .content.index header{margin-bottom:60px;}

.content footer .levels,
.content header .levels{float:left;}

.content footer .levels span
.content header .levels span{float:left;padding: 5px 12px 6px;color:#444;}

.content footer .modes,
.content header .modes{float:right;margin-top:5px;}

.content footer .modes a,
.content header .modes a{float:left;font:bold 12px/1 "Open Sans", sans-serif;color:#444;padding:8px 12px 6px;
    background:#fff;margin-left:6px;text-transform:uppercase;opacity:.4;
  -webkit-box-shadow: 0 0 3px rgba(0,0,0,.25);
     -moz-box-shadow: 0 0 3px rgba(0,0,0,.25);
      box-shadow: 0 0 3px rgba(0,0,0,.25);
  }
.content footer .modes a.active,  
.content header .modes a.active{opacity:1;}

.content.bib header h1{background-image:url(/static/i/icon-folder.png);}
.content.search header h1{background-image:url(/static/i/icon-search.png);}
.content.holdings header h1{background-image:url(/static/i/icon-holdings.png);color:#683568;}
.content.footer footer h1{background-image:url(/static/i/libris-footer.png);color:#683568;}

.content.holdings a {color:#683568;}
.content.holdings label .lbl {color:#683568;}
.content section{background:#fff; margin: 0 0 12px; padding: 12px;
  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.2);
     -moz-box-shadow: 0 1px 3px rgba(0,0,0,.2);
      box-shadow: 0 1px 3px rgba(0,0,0,.2);
}

.content section .foot{text-align:right;}

.content section.submit{background:transparent;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  padding:12px 0;
  width:1008px;
  text-align: right;
}
div.submit {text-align: right;}

.content section h3{font:bold italic 16px/20px "Droid Serif", georgia,serif; color:#1a8f72; 
  border-bottom:1px solid #1a8f72; padding-bottom: 2px; }

.content section h2,
section.nav dt{background:#1a8f72;font:bold 12px/16px "Open Sans", sans-serif; text-transform:uppercase;float:left;
  padding: 5px 24px;  color:#fff;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.08);
  -webkit-font-smoothing: antialiased;
  margin-left:-24px;
  position:relative;
}

.content section h2 i,
section.nav dt i{
  position:absolute;left:2px;bottom:-10px;
  width: 0px;
  height: 0px;
  border-style: solid;
  border-width: 0 10px 10px 0;
  border-color: transparent #106351 transparent transparent;
}

/* hitlist */

section.nav dt i{border-right-color:#666;}

section.nav{background-color:#f6f3ee;}
section.nav dt{background:#adadad;margin-bottom:12px;}
section.nav dd{clear:both;margin: 0 0;line-height:1;font-size:13px;}
section.nav dd a{color:#666;padding:6px 0 6px 18px;background:url(/static/i/dot.png) no-repeat 4px 9px;display:inline-block;}
section.nav dd a.active{font-weight:bold;color:#000;background:url(/static/i/check.png) no-repeat 0 5px;cursor:default;}
section.nav dd a.active:hover{text-decoration: none}

section.result{position:relative;border:1px solid #fff;padding:23px 11px 41px;
  -webkit-transition:border ease-out 0.05s; cursor:pointer;}
section.result .footer{position: absolute; bottom:0; left:0; right:0;padding: 6px 12px; background:#f6f3ee;color:#666;font-size:12px;}
section.result .footer span:first-child,
section.result .footer span.level{margin-left:0;padding-left:0;border-left:none;}
section.result .footer span.level{float:right;}

section.result a,
section.result a:hover{color:#444;text-decoration:none;}

section.result:hover{border-color:#aaa;}

section.result label{cursor:pointer;}
section.result label:hover{border-color:#ddd;}
section.result label .lbl{color:#999;}

section.result label.title{font-size:20px;line-height:24px;}
section.result label.title .ficon{font-size:16px;color:#27b492;}
section.result label.title .lbl{margin-top:4px;}
section.result label.title .title-remainder{font-size:16px; display:block;}

section.result .excerpt{margin-bottom:-14px;}
section.result .excerpt label{background:#f6f3ee url(/static/i/pat1.png);padding-top:4px;padding-bottom:4px;}

section.result .highlight{padding:0 2px;background:rgba(40,180,146,.4);}

/* frontpage 98 */

section.dash{border-top: 5px solid #999;position:relative;}
section.dash .circle{width:38px;height:38px;display:block;position:absolute;left:50%;margin-left:-19px;top:-21px;
  border-radius: 19px;
  -moz-border-radius: 19px;
  -webkit-border-radius: 19px;
}
section.dash .circle .ficon{display:block;text-align:center;line-height:38px;color:#fff;font-size:20px;padding-left:1px;}

section.dash.pink{border-top-color: #fa1963;}
section.dash.pink .circle{background-color: #fa1963;}
section.dash.purple{border-top-color: #683568;}
section.dash.purple .circle{background-color: #683568;}
section.dash.green{border-top-color: #1a8f72;}
section.dash.green .circle{background-color: #1a8f72;}
section.dash.grey{border-top-color: #c7c7c7;}
section.dash.grey .circle{background-color: #c7c7c7;}

section.dash {margin-bottom: 30px;}

/* columns */
.cols{overflow:hidden;width: 1008px;}
.col12{width:984px; float:left;margin-right:24px;}
.col9{width: 732px; float:left;margin-right:24px;}
.col8{width: 648px; float:left;margin-right:24px;}
.col6{width: 480px; float:left;margin-right:24px;}
.col5{width: 396px; float:left;margin-right:24px;}
.col4{width: 312px; float:left;margin-right:24px;}
.col3{width: 228px; float:left; margin-right:24px;}
.col2{width: 144px; float:left; margin-right:24px;}

.content.search > .cols{width:1036px;overflow:visible;}
.content.search .col9{width:756px;overflow:visible;}
.content.search .col3{overflow:visible;}

.content.search .summary{margin-left:252px;color:#666;font-size:14px;margin-bottom:12px}

/* login */

form.login{width:312px;margin: 0 auto;padding-top:60px;position:relative;}
form.login label{border-left:none;padding-left:0;}
/* ... */

